styles to fix position on mobile

--- a/Tabs.css
+++ b/Tabs.css
@@ -9,6 +9,22 @@
   -webkit-overflow-scrolling: touch;
 }
 
+@media (max-width: 768px) {
+  html,
+  body {
+    position: fixed;
+    overflow: hidden;
+    user-select: none;
+  }
+
+  main {
+    width: 100vw;
+    height: 100vh;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
 /* Tabs.css */
 
 .tab-header-container {
